Nueva carpeta/Lumen/crates/lumen-parser/src/parser.rs
use crate::ast::*;
use crate::error::ParseError;
use lumen_lexer::token::{Span, Token, TokenKind};

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
    errors: Vec<ParseError>,
    suppressed_errors: usize,
    no_struct_init: bool,
    type_params_stack: Vec<Vec<String>>,
    pending_greater: bool,
    // Dentro de un arm de `elegir`, `|` separa patrones (OR) - nunca BinOp::BitOr.
    match_arm_pipe: bool,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self {
            tokens,
            pos: 0,
            errors: Vec::new(),
            suppressed_errors: 0,
            no_struct_init: false,
            type_params_stack: Vec::new(),
            pending_greater: false,
            match_arm_pipe: false,
        }
    }

    pub fn parse(self) -> (Program, Vec<ParseError>) {
        let (program, errors, _) = self.parse_with_report();
        (program, errors)
    }

    /// Igual que `parse`, pero además devuelve cuántos errores se suprimieron
    /// por cascada (QA bug J) para mostrarlos en el resumen del CLI.
    pub fn parse_with_report(mut self) -> (Program, Vec<ParseError>, usize) {
        let mut program = Vec::new();
        while !self.is_at_end() {
            if self.check(&[TokenKind::Eof]) {
                break;
            }
            match self.parse_decl_or_stmt() {
                Some(node) => program.push(node),
                None => {
                    if !self.is_at_end() && !self.check(&[TokenKind::Eof]) {
                        self.synchronize();
                    }
                }
            }
        }
        let suppressed = self.suppressed_errors;
        (program, self.errors, suppressed)
    }

    fn parse_decl_or_stmt(&mut self) -> Option<DeclOrStmt> {
        if self.check(&[
            TokenKind::Numero,
            TokenKind::Entero,
            TokenKind::Decimal,
            TokenKind::Texto,
            TokenKind::Booleano,
            TokenKind::Lista,
            TokenKind::Array,
            TokenKind::Resultado,
            TokenKind::Result,
            TokenKind::Opcion,
            TokenKind::Option,
            TokenKind::Number,
            TokenKind::Integer,
            TokenKind::Float,
            TokenKind::String,
            TokenKind::Boolean,
        ]) || (self.check_ident() && self.check_ident_next())
            || self.check_next_is_tuple_type()
            || self.check_ident_next_is_generic_type()
        {
            if self.check(&[
                TokenKind::Numero,
                TokenKind::Entero,
                TokenKind::Decimal,
                TokenKind::Texto,
                TokenKind::Booleano,
                TokenKind::Lista,
                TokenKind::Array,
                TokenKind::Resultado,
                TokenKind::Result,
                TokenKind::Opcion,
                TokenKind::Option,
                TokenKind::Number,
                TokenKind::Integer,
                TokenKind::Float,
                TokenKind::String,
                TokenKind::Boolean,
            ]) && self.check_next(&[TokenKind::LeftParen])
            {
                self.parse_expr_or_assign().map(DeclOrStmt::Stmt)
            } else {
                self.parse_declaration().map(DeclOrStmt::Decl)
            }
        } else if self.check(&[TokenKind::Async]) {
            self.parse_async_function().map(DeclOrStmt::Decl)
        } else if self.check(&[TokenKind::Funcion, TokenKind::Function]) {
            if self.check_next(&[
                TokenKind::Numero,
                TokenKind::Entero,
                TokenKind::Decimal,
                TokenKind::Texto,
                TokenKind::Booleano,
                TokenKind::Lista,
                TokenKind::Array,
                TokenKind::Resultado,
                TokenKind::Result,
                TokenKind::Opcion,
                TokenKind::Option,
                TokenKind::Number,
                TokenKind::Integer,
                TokenKind::Float,
                TokenKind::String,
                TokenKind::Boolean,
                TokenKind::Impl,
            ]) {
                self.parse_function().map(DeclOrStmt::Decl)
            } else if self.check_next(&[TokenKind::LeftParen]) {
                self.parse_expr_or_assign().map(DeclOrStmt::Stmt)
            } else {
                self.parse_function().map(DeclOrStmt::Decl)
            }
        } else if self.check(&[TokenKind::Sea, TokenKind::Let]) {
            if self.is_guard_let() {
                self.parse_guard_let().map(DeclOrStmt::Stmt)
            } else {
                self.parse_declaration().map(DeclOrStmt::Decl)
            }
        } else if self.check(&[TokenKind::Si, TokenKind::If]) {
            self.parse_if().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Mientras, TokenKind::While]) {
            self.parse_while().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Para, TokenKind::For]) {
            if self.check_next(&[TokenKind::LeftParen]) {
                self.parse_for().map(DeclOrStmt::Stmt)
            } else if self.is_foreach_like() {
                self.parse_foreach().map(DeclOrStmt::Stmt)
            } else {
                self.parse_for().map(DeclOrStmt::Stmt)
            }
        } else if self.check(&[TokenKind::Retornar, TokenKind::Return]) {
            self.parse_return().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Romper, TokenKind::Break]) {
            self.parse_break().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Continuar, TokenKind::Continue]) {
            self.parse_continue().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Elegir, TokenKind::Match]) {
            self.parse_match().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Estructura, TokenKind::Struct]) {
            self.parse_struct_decl().map(DeclOrStmt::Decl)
        } else if self.check(&[TokenKind::Enum]) {
            self.parse_enum().map(DeclOrStmt::Decl)
        } else if self.check(&[TokenKind::Const]) {
            self.parse_const().map(DeclOrStmt::Decl)
        } else if self.check(&[TokenKind::Rasgo, TokenKind::Trait]) {
            self.parse_rasgo().map(DeclOrStmt::Decl)
        } else if self.check(&[TokenKind::Impl]) {
            self.parse_impl_rasgo().map(DeclOrStmt::Decl)
        } else if self.check(&[TokenKind::Posponer, TokenKind::Defer]) {
            self.parse_posponer().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Intentar, TokenKind::Try]) && self.check_next_is_brace() {
            self.parse_try_catch().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Ensamblador, TokenKind::Asm]) {
            self.parse_inline_asm().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::BloqueC, TokenKind::CBlock]) {
            self.parse_inline_c().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::BloqueRust, TokenKind::RustBlock]) {
            self.parse_inline_rust().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::Importar, TokenKind::Import]) {
            self.parse_import().map(DeclOrStmt::Stmt)
        } else if self.check(&[TokenKind::LeftBrace]) {
            self.parse_block_stmt().map(DeclOrStmt::Stmt)
        } else {
            self.parse_expr_or_assign().map(DeclOrStmt::Stmt)
        }
    }

    fn parse_declaration(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        let mut var_type = self.parse_type()?;
        let name = self.expect_ident()?;

        // C-style array type: `entero paleta_r[] = [...]`
        if self.check(&[TokenKind::LeftBracket]) {
            self.advance();
            if !self.check(&[TokenKind::RightBracket]) {
                self.error(
                    "E022",
                    "Se esperaba ']' para cerrar el tipo arreglo",
                    self.peek().span,
                    "Agrega ']' después de '['",
                );
                return None;
            }
            self.advance();
            var_type = Type::Lista(Box::new(var_type));
        }

        if self.check(&[TokenKind::Comma]) {
            return self.parse_destructure_decl(var_type, name, start);
        }

        let init = if self.check(&[TokenKind::Equal]) {
            self.advance();
            // Permitir struct-init en el inicializador (p.ej. `sea c = Caja { valor: 1 };`)
            let saved_nsi = self.no_struct_init;
            self.no_struct_init = false;
            let e = self.parse_expression().map(Box::new);
            self.no_struct_init = saved_nsi;
            e
        } else {
            None
        };
        self.expect_semicolon();
        Some(Decl::Variable {
            var_type,
            name,
            init,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_destructure_decl(
        &mut self,
        first_type: Type,
        first_name: String,
        start: Span,
    ) -> Option<Decl> {
        let mut targets = Vec::new();
        targets.push(DestructureTarget {
            var_type: Some(first_type),
            name: first_name,
            span: Span::merge(&start, &start),
        });

        loop {
            self.advance();
            let t_start = self.peek().span;
            if self.check_ident() && self.peek_ident_is("_") {
                self.advance();
                targets.push(DestructureTarget {
                    var_type: None,
                    name: "_".to_string(),
                    span: Span::merge(&t_start, &self.previous().span),
                });
            } else {
                let t_type = self.parse_type()?;
                let t_name = self.expect_ident()?;
                targets.push(DestructureTarget {
                    var_type: Some(t_type),
                    name: t_name,
                    span: Span::merge(&t_start, &self.previous().span),
                });
            }
            if !self.check(&[TokenKind::Comma]) {
                break;
            }
        }

        if !self.check(&[TokenKind::Equal]) {
            self.error(
                "E012",
                "Se esperaba '=' para la destructuración",
                start,
                "Agrega '=' después de las variables",
            );
            return None;
        }
        self.advance();
        let init = Box::new(self.parse_expression()?);
        self.expect_semicolon();
        Some(Decl::Destructure {
            targets,
            init,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_async_function(&mut self) -> Option<Decl> {
        self.advance(); // consume async
        let mut decl = self.parse_function()?;
        if let Decl::Function {
            ref mut is_async, ..
        } = &mut decl
        {
            *is_async = true;
        }
        Some(decl)
    }

    fn parse_function(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance();
        let return_type = self.parse_type()?;
        // Function name: ident or keyword (e.g. `funcion void texto(...)`)
        let name = match self.peek().kind {
            TokenKind::Ident(ref s) => {
                let s = s.clone();
                self.advance();
                s
            }
            _ => {
                let kw = self.peek().kind.as_str();
                if kw.is_empty() {
                    self.advance();
                    self.error(
                        "E011",
                        "Se esperaba un nombre de función",
                        start,
                        "Escribe un identificador para la función",
                    );
                    return None;
                }
                let kw = kw.to_string();
                self.advance();
                kw
            }
        };

        if self.check(&[TokenKind::Equal]) {
            self.advance();
            let saved_nsi = self.no_struct_init;
            self.no_struct_init = false;
            let e = self.parse_expression().map(Box::new);
            self.no_struct_init = saved_nsi;
            self.expect_semicolon();
            return Some(Decl::Variable {
                var_type: return_type,
                name,
                init: e,
                span: Span::merge(&start, &self.previous().span),
            });
        }

        let (type_params, type_param_bounds) = self.parse_type_params();

        if !self.check(&[TokenKind::LeftParen]) {
            self.error(
                "E014",
                "Se esperaba '('",
                start,
                "Agrega '(' para iniciar la lista de parámetros",
            );
            return None;
        }
        self.advance();

        let mut params = Vec::new();
        if !self.check(&[TokenKind::RightParen]) {
            params.push(self.parse_param()?);
            while self.check(&[TokenKind::Comma]) {
                self.advance();
                params.push(self.parse_param()?);
            }
        }
        if !self.check(&[TokenKind::RightParen]) {
            self.error(
                "E015",
                "Se esperaba ')'",
                start,
                "Agrega ')' para cerrar la lista de parámetros",
            );
            return None;
        }
        self.advance();

        // Push type params into stack for body parsing
        let saved_type_params = self.type_params_stack.clone();
        if !type_params.is_empty() {
            self.type_params_stack.push(type_params.clone());
        }
        let body = self.parse_block()?;
        if !type_params.is_empty() {
            self.type_params_stack.pop();
        }
        self.type_params_stack = saved_type_params;
        Some(Decl::Function {
            return_type,
            name,
            params,
            body,
            type_params,
            type_param_bounds,
            is_async: false,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_struct_decl(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance();
        let name = self.expect_ident()?;

        let (type_params, type_param_bounds) = self.parse_type_params();

        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E017",
                "Se esperaba '{' para la estructura",
                start,
                "Agrega '{' para definir los campos",
            );
            return None;
        }
        self.advance();

        let mut fields = Vec::new();
        while !self.check(&[TokenKind::RightBrace]) && !self.is_at_end() {
            if self.check(&[TokenKind::Eof]) {
                break;
            }

            let field_start = self.peek().span;
            let field_name = self.expect_field_name()?;

            if !self.check(&[TokenKind::Colon]) {
                self.error(
                    "E052",
                    "Se esperaba ':' después del nombre del campo",
                    self.peek().span,
                    "Agrega ':' después del nombre del campo",
                );
                return None;
            }
            self.advance();

            let field_type = self.parse_type()?;

            fields.push(StructField {
                field_type,
                name: field_name,
                span: Span::merge(&field_start, &self.previous().span),
            });

            if self.check(&[TokenKind::Comma]) {
                self.advance();
            } else if !self.check(&[TokenKind::RightBrace]) {
                self.error(
                    "E012",
                    "Se esperaba ',' o '}' para cerrar la estructura",
                    self.peek().span,
                    "Agrega ',' entre campos o '}' para cerrar",
                );
                return None;
            }
        }

        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E017",
                "Se esperaba '}' para cerrar la estructura",
                start,
                "Agrega '}' al final de la estructura",
            );
            return None;
        }
        self.advance();

        Some(Decl::Struct {
            name,
            fields,
            type_params,
            type_param_bounds,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_enum(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance();
        let name = self.expect_ident()?;

        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E017",
                "Se esperaba '{' para la enumeración",
                start,
                "Agrega '{' para definir las variantes",
            );
            return None;
        }
        self.advance();

        let mut variants = Vec::new();
        while !self.check(&[TokenKind::RightBrace]) && !self.is_at_end() {
            if self.check(&[TokenKind::Eof]) {
                break;
            }
            let var_start = self.peek().span;
            let var_name = self.expect_ident()?;
            let var_types = if self.check(&[TokenKind::LeftParen]) {
                self.advance();
                let mut types = Vec::new();
                if !self.check(&[TokenKind::RightParen]) {
                    types.push(self.parse_type()?);
                    while self.check(&[TokenKind::Comma]) {
                        self.advance();
                        types.push(self.parse_type()?);
                    }
                }
                if !self.check(&[TokenKind::RightParen]) {
                    self.error(
                        "E015",
                        "Se esperaba ')'",
                        var_start,
                        "Agrega ')' para cerrar los tipos de la variante",
                    );
                    return None;
                }
                self.advance();
                types
            } else {
                Vec::new()
            };
            variants.push(EnumVariant {
                name: var_name,
                types: var_types,
                span: Span::merge(&var_start, &self.previous().span),
            });
            if self.check(&[TokenKind::Comma]) {
                self.advance();
            } else if !self.check(&[TokenKind::RightBrace]) {
                self.error(
                    "E012",
                    "Se esperaba ',' o '}' para cerrar la enumeración",
                    self.peek().span,
                    "Agrega ',' entre variantes o '}' para cerrar",
                );
                return None;
            }
        }
        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E017",
                "Se esperaba '}' para cerrar la enumeración",
                start,
                "Agrega '}' al final de la enumeración",
            );
            return None;
        }
        self.advance();
        Some(Decl::Enum {
            name,
            variants,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_const(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance(); // consume const
        let var_type = self.parse_type()?;
        let name = self.expect_ident()?;
        if !self.check(&[TokenKind::Equal]) {
            self.error(
                "E012",
                "Se esperaba '=' en declaración const",
                self.peek().span,
                "Agrega '=' después del nombre de la constante",
            );
            return None;
        }
        self.advance();
        let value = Box::new(self.parse_expression()?);
        self.expect_semicolon();
        Some(Decl::Const {
            var_type,
            name,
            value,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_rasgo(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance(); // consume rasgo/trait
        let name = self.expect_ident()?;
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E017",
                "Se esperaba '{' para el rasgo",
                start,
                "Agrega '{' para definir los métodos",
            );
            return None;
        }
        self.advance();
        let mut methods = Vec::new();
        let mut associated_types = Vec::new();
        while !self.check(&[TokenKind::RightBrace]) && !self.is_at_end() {
            if self.check(&[TokenKind::Eof]) {
                break;
            }
            // Check for associated type: tipo Item;
            if self.check(&[TokenKind::Tipo]) {
                let type_start = self.peek().span;
                self.advance(); // consume tipo
                let assoc_name = self.expect_ident()?;
                let default = if self.check(&[TokenKind::Equal]) {
                    self.advance(); // consume =
                    Some(self.parse_type()?)
                } else {
                    None
                };
                self.expect_semicolon();
                associated_types.push(AssociatedType {
                    name: assoc_name,
                    default,
                    span: Span::merge(&type_start, &self.previous().span),
                });
            } else if self.check(&[TokenKind::Funcion, TokenKind::Function]) {
                // Parse method signature
                self.advance(); // consume funcion/function
                let ret_type = self.parse_type()?;
                let method_name = self.expect_ident()?;
                if !self.check(&[TokenKind::LeftParen]) {
                    self.error(
                        "E014",
                        "Se esperaba '('",
                        start,
                        "Agrega '(' para iniciar los parámetros",
                    );
                    return None;
                }
                self.advance();
                let mut params = Vec::new();
                if !self.check(&[TokenKind::RightParen]) {
                    // Check if first param is the receiver (just a name, no type)
                    if self.check_ident() && !self.is_type_keyword(&self.peek().kind) {
                        let receiver_name = self.expect_ident()?;
                        // Use a placeholder type for the receiver — resolved during sema
                        params.push(Param {
                            param_type: Type::Struct("Self".to_string()),
                            name: receiver_name,
                            default: None,
                            span: Span::merge(&start, &self.previous().span),
                        });
                        if self.check(&[TokenKind::Comma]) {
                            self.advance();
                        }
                    }
                    while !self.check(&[TokenKind::RightParen]) {
                        params.push(self.parse_param()?);
                        while self.check(&[TokenKind::Comma]) {
                            self.advance();
                            if self.check(&[TokenKind::RightParen]) {
                                break;
                            }
                            params.push(self.parse_param()?);
                        }
                    }
                }
                if !self.check(&[TokenKind::RightParen]) {
                    self.error(
                        "E015",
                        "Se esperaba ')'",
                        start,
                        "Agrega ')' para cerrar los parámetros",
                    );
                    return None;
                }
                self.advance();
                self.expect_semicolon();
                methods.push(TraitMethod {
                    name: method_name,
                    params,
                    return_type: ret_type,
                });
            } else {
                self.error(
                    "E072",
                    "Se esperaba 'funcion' o 'tipo' en el rasgo",
                    self.peek().span,
                    "Agrega 'funcion tipo nombre(...)' o 'tipo Nombre'",
                );
                return None;
            }
        }
        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E017",
                "Se esperaba '}' para cerrar el rasgo",
                start,
                "Agrega '}' al final del rasgo",
            );
            return None;
        }
        self.advance();
        Some(Decl::Rasgo {
            name,
            methods,
            associated_types,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_posponer(&mut self) -> Option<Stmt> {
        let start = self.peek().span;
        self.advance(); // consume posponer/defer
        let body = if self.check(&[TokenKind::LeftBrace]) {
            self.parse_block()?
        } else {
            let stmt = self.parse_decl_or_stmt()?;
            vec![stmt]
        };
        Some(Stmt::Posponer {
            body,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn check_next_is_brace(&self) -> bool {
        if self.pos + 1 >= self.tokens.len() {
            return false;
        }
        matches!(self.tokens[self.pos + 1].kind, TokenKind::LeftBrace)
    }

    fn parse_try_catch(&mut self) -> Option<Stmt> {
        let start = self.peek().span;
        self.advance(); // consume intentar/try
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E017",
                "Se esperaba '{' después de 'intentar'",
                start,
                "Usa: intentar { ... } atrapar (e) { ... }",
            );
            return None;
        }
        let try_body = self.parse_block()?;
        if !self.check(&[TokenKind::Atrapar, TokenKind::Catch]) {
            self.error(
                "E012",
                "Se esperaba 'atrapar' / 'catch' después del bloque intentar",
                start,
                "Agrega 'atrapar (e) { ... }'",
            );
            return None;
        }
        self.advance(); // consume atrapar/catch
        let err_var = if self.check(&[TokenKind::LeftParen]) {
            self.advance();
            let v = self.expect_ident()?;
            if !self.check(&[TokenKind::RightParen]) {
                self.error(
                    "E015",
                    "Se esperaba ')' después del nombre de error",
                    start,
                    "Agrega ')'",
                );
                return None;
            }
            self.advance();
            v
        } else {
            "e".to_string()
        };
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E017",
                "Se esperaba '{' para el bloque atrapar",
                start,
                "Agrega '{ ... }'",
            );
            return None;
        }
        let catch_body = self.parse_block()?;
        let end = self.previous().span;
        Some(Stmt::TryCatch {
            try_body,
            err_var,
            catch_body,
            span: Span::merge(&start, &end),
        })
    }

    fn parse_inline_asm(&mut self) -> Option<Stmt> {
        let start = self.peek().span;
        self.advance();
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E015",
                "Se esperaba '{' después de 'ensamblador' / 'asm'",
                start,
                "Agrega '{'",
            );
            return None;
        }
        self.advance();
        let _expr = self.parse_expression()?;
        let code = match &_expr {
            Expr::Str { value, .. } => value.clone(),
            _ => "/* inline asm */".to_string(),
        };
        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E015",
                "Se esperaba '}' para cerrar el bloque de ensamblador",
                start,
                "Agrega '}'",
            );
            return None;
        }
        self.advance();
        Some(Stmt::InlineAsm {
            code,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_inline_c(&mut self) -> Option<Stmt> {
        let start = self.peek().span;
        self.advance();
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E015",
                "Se esperaba '{' después de 'bloque_c'",
                start,
                "Agrega '{'",
            );
            return None;
        }
        self.advance();
        let _expr = self.parse_expression()?;
        let code = match &_expr {
            Expr::Str { value, .. } => value.clone(),
            _ => "/* inline c */".to_string(),
        };
        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E015",
                "Se esperaba '}' para cerrar el bloque C",
                start,
                "Agrega '}'",
            );
            return None;
        }
        self.advance();
        Some(Stmt::InlineC {
            code,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_inline_rust(&mut self) -> Option<Stmt> {
        let start = self.peek().span;
        self.advance();
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E015",
                "Se esperaba '{' después de 'bloque_rust'",
                start,
                "Agrega '{'",
            );
            return None;
        }
        self.advance();
        let _expr = self.parse_expression()?;
        let code = match &_expr {
            Expr::Str { value, .. } => value.clone(),
            _ => "/* inline rust */".to_string(),
        };
        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E015",
                "Se esperaba '}' para cerrar el bloque Rust",
                start,
                "Agrega '}'",
            );
            return None;
        }
        self.advance();
        Some(Stmt::InlineRust {
            code,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn is_type_keyword(&self, kind: &TokenKind) -> bool {
        matches!(
            kind,
            TokenKind::Numero
                | TokenKind::Number
                | TokenKind::Entero
                | TokenKind::Integer
                | TokenKind::Decimal
                | TokenKind::Float
                | TokenKind::Texto
                | TokenKind::String
                | TokenKind::Booleano
                | TokenKind::Boolean
                | TokenKind::Lista
                | TokenKind::Array
                | TokenKind::Resultado
                | TokenKind::Result
                | TokenKind::Opcion
                | TokenKind::Option
        )
    }

    fn parse_impl_rasgo(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance(); // consume impl
        let ident_name = self.expect_ident()?;
        let (trait_name, target_type) = if self.check(&[TokenKind::Para, TokenKind::For]) {
            self.advance(); // consume para/for
            let target_type = self.parse_type()?;
            (ident_name, target_type)
        } else if self.check(&[TokenKind::LeftBrace]) {
            (String::new(), Type::Struct(ident_name))
        } else {
            self.error(
                "E073",
                "Se esperaba 'para'/'for' después del nombre del rasgo o '{' para métodos",
                self.peek().span,
                "Agrega 'para <tipo>' o '{' directamente",
            );
            return None;
        };
        if !self.check(&[TokenKind::LeftBrace]) {
            self.error(
                "E017",
                "Se esperaba '{' para la implementación",
                start,
                "Agrega '{' para definir los métodos",
            );
            return None;
        }
        self.advance();
        let mut methods = Vec::new();
        let mut associated_types = Vec::new();
        while !self.check(&[TokenKind::RightBrace]) && !self.is_at_end() {
            if self.check(&[TokenKind::Eof]) {
                break;
            }
            if self.check(&[TokenKind::Tipo]) {
                let type_start = self.peek().span;
                self.advance(); // consume tipo
                let assoc_name = self.expect_ident()?;
                if !self.check(&[TokenKind::Equal]) {
                    self.error(
                        "E071",
                        "Se esperaba '=' en la especificación del tipo asociado",
                        self.peek().span,
                        "Agrega '=' seguido de un tipo",
                    );
                    return None;
                }
                self.advance(); // consume =
                let assoc_type = self.parse_type()?;
                self.expect_semicolon();
                associated_types.push(ImplAssociatedType {
                    name: assoc_name,
                    target_type: assoc_type,
                    span: Span::merge(&type_start, &self.previous().span),
                });
            } else if self.check(&[TokenKind::Funcion, TokenKind::Function]) {
                let func = self.parse_method_impl()?;
                methods.push(func);
            } else {
                self.error(
                    "E072",
                    "Se esperaba 'funcion' o 'tipo' en la implementación",
                    self.peek().span,
                    "Agrega 'funcion' o 'tipo Nombre = Tipo;'",
                );
                return None;
            }
        }
        if !self.check(&[TokenKind::RightBrace]) {
            self.error(
                "E017",
                "Se esperaba '}' para cerrar la implementación",
                start,
                "Agrega '}' al final",
            );
            return None;
        }
        self.advance();
        Some(Decl::ImplRasgo {
            trait_name,
            target_type,
            associated_types,
            methods,
            span: Span::merge(&start, &self.previous().span),
        })
    }

    fn parse_method_impl(&mut self) -> Option<Decl> {
        let start = self.peek().span;
        self.advance(); // consume funcion/function
        let return_type = self.parse_type()?;
        let name = self.expect_ident()?;

        if !self.check(&[TokenKind::LeftParen]) {
            self.error(
                "E014",
                "Se esperaba '('",
                start,
                "Agrega '(' para iniciar la lista de parámetros",
            );
            return None;
        }
        self.advance();

        let mut params = Vec::new();
        if !self.check(&[TokenKind::RightParen]) {
            // Check if first param is the receiver (just a name, no type)
            if self.check_ident() && !self.is_type_keyword(&self.peek().kind) {
                let receiver_name = self.expect_ident()?;
                params.push(Param {
                    param_type: Type::Struct("Self".to_string()),
                    name: receiver_name,
                    default: None,
                    span: Span::merge(&start, &self.previous().span),
                });
                if self.check(&[TokenKind::Comma]) {
                    self.advance();
                }
            }
            while !self.check(&[TokenKind::RightParen]) {
                params.push(self.parse_param()?);
                while self.check(&[TokenKind::Comma]) {
                    self.advance();
                    if self.check(&[TokenKind::RightParen]) {
                        break;
                    }
                    params.push(self.parse_param()?);
                }
            }
        }

        if !self.check(&[TokenKind::RightParen]) {
            self.error(
                "E015",
                "Se esperaba ')'",
                start,
                "Agrega ')' para cerrar la lista de parámetros",
            );
            return None;
        }
        self.advance();

        let body = self.parse_block()?;
        Some(Decl::Function {
            return_type,
            name,
            params,
            body,
            type_params: Vec::new(),
            type_param_bounds: Vec::new(),
            is_async: false,
            span: Span::merge(&start, &self.previous().span),
        })
    }
